<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <!-- записываетса история-->
    <TextView
        android:id="@+id/textViewHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/textViewInput"
        android:layout_alignEnd="@+id/gridLayout"
        android:layout_alignRight="@+id/gridLayout"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="@dimen/textSize" />

    <!-- записываетса вод юзера и вывод резултата-->
    <TextView
        android:id="@+id/textViewInput"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/textViewAnswer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/button_0"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="@dimen/textSize" />
    <!--записываетса ответ-->
    <TextView
        android:id="@+id/textViewAnswer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/gridLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="TextView"
        android:textSize="@dimen/button_size_text" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewAnswer"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textViewAnswer"
        android:columnCount="4"
        android:orientation="horizontal"
        android:rowCount="5">

        <Button
            android:id="@+id/button_Clear"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="@dimen/layout_height_button"
            android:layout_margin="@dimen/dp"
            android:background="@color/color_button"
            android:onClick="onClick"
            android:text="@string/button_Clear"
            android:textColor="@color/black"
            android:textSize="@dimen/button_size_text" />

        <Button
            android:id="@+id/button_del"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="@dimen/layout_height_button"
            android:layout_margin="@dimen/dp"
            android:background="@color/color_button"
            android:onClick="onClick"
            android:text="@string/button_del"
            android:textColor="@color/black"
            android:textSize="@dimen/button_size_text" />

        <Button
            android:id="@+id/button_interest"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="@dimen/layout_height_button"
            android:layout_margin="@dimen/dp"
            android:background="@color/color_button"
            android:onClick="onClick"
            android:text="@string/button_interest"
            android:textColor="@color/black"
            android:textSize="@dimen/button_size_text" />

        <Button
            android:id="@+id/button_divide"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="@dimen/layout_height_button"
            android:layout_margin="@dimen/dp"
            android:background="@color/color_button"
            android:onClick="onClick"
            android:text="@string/button_divide"
            android:textColor="@color/black"
            android:textSize="@dimen/button_size_text" />

        <Button
            android:id="@+id/button_1"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="@dimen/layout_height_button"
            android:layout_margin="@dimen/dp"
            android:background="@drawable/oval_button"
            android:onClick="onClick"
            android:text="@string/button_1"
            android:textSize="@dimen/button_size_text" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="@dimen/layout_height_button"
            android:layout_margin="@dimen/dp"
            android:background="@drawable/oval_button"
            android:onClick="onClick"
            android:text="@string/button_2"
            android:textSize="@dimen/button_size_text" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="@dimen/layout_height_button"
            android:layout_margin="@dimen/dp"
            android:background="@drawable/oval_button"
            android:onClick="onClick"
            android:text="@string/button_3"
            android:textSize="@dimen/button_size_text" />

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="@dimen/layout_height_button"
            android:layout_margin="@dimen/dp"
            android:background="@color/color_button"
            android:onClick="onClick"
            android:text="@string/button_multiply"
            android:textColor="@color/black"
            android:textSize="@dimen/button_size_text" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="@dimen/layout_height_button"
            android:layout_margin="@dimen/dp"
            android:background="@drawable/oval_button"
            android:onClick="onClick"
            android:text="@string/button_4"
            android:textSize="@dimen/button_size_text" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="@dimen/layout_height_button"
            android:layout_margin="@dimen/dp"
            android:background="@drawable/oval_button"
            android:onClick="onClick"
            android:text="@string/button_5"
            android:textSize="@dimen/button_size_text" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="@dimen/layout_height_button"
            android:layout_margin="@dimen/dp"
            android:background="@drawable/oval_button"
            android:onClick="onClick"
            android:text="@string/button_6"
            android:textSize="@dimen/button_size_text" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="@dimen/layout_height_button"
            android:layout_margin="@dimen/dp"
            android:background="@color/color_button"
            android:onClick="onClick"
            android:text="@string/button_minus"
            android:textColor="@color/black"
            android:textSize="@dimen/button_size_text" />

        <Button
            android:id="@+id/button_7"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="@dimen/layout_height_button"
            android:layout_margin="@dimen/dp"
            android:background="@drawable/oval_button"
            android:onClick="onClick"
            android:text="@string/button_7"
            android:textSize="@dimen/button_size_text" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="@dimen/layout_height_button"
            android:layout_margin="@dimen/dp"
            android:background="@drawable/oval_button"
            android:onClick="onClick"
            android:text="@string/button_8"
            android:textSize="@dimen/button_size_text" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="@dimen/layout_height_button"
            android:layout_margin="@dimen/dp"
            android:background="@drawable/oval_button"
            android:onClick="onClick"
            android:text="@string/button_9"
            android:textSize="@dimen/button_size_text" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="200dp"
            android:layout_rowSpan="2"
            android:layout_margin="@dimen/dp"
            android:background="@color/color_button"
            android:onClick="onClick"
            android:text="@string/button_plus"
            android:textColor="@color/black"
            android:textSize="@dimen/button_size_text" />

        <Button
            android:id="@+id/button_0"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="@dimen/layout_height_button"
            android:layout_margin="@dimen/dp"
            android:background="@drawable/oval_button"
            android:onClick="onClick"
            android:text="@string/button_0"
            android:textSize="@dimen/button_size_text" />

        <Button
            android:id="@+id/button_00"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="@dimen/layout_height_button"
            android:layout_margin="@dimen/dp"
            android:background="@drawable/oval_button"
            android:onClick="onClick"
            android:text="@string/button_00"
            android:textSize="@dimen/button_size_text" />

        <Button
            android:id="@+id/button_point"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="@dimen/layout_height_button"
            android:layout_margin="@dimen/dp"
            android:background="@drawable/oval_button"
            android:onClick="onClick"
            android:text="@string/button_point"
            android:textSize="@dimen/button_size_text" />

    </GridLayout>


</RelativeLayout>